# simplelhs

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: example.py
simplelhs/: __init__.py  lhs.py  normalisation.py
simplelhs.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py  lhs.py
